finished all TODOsgit status

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -2,7 +2,7 @@
 
 @misc{repo_01,
   author = {Jesus Antonio Soto},
-  title = {ESH Fork with JWT Authentication},
+  title = {{ESH Fork with JWT Authentication}},
   month = {April},
   year = {2018},
   howpublished = {\url{https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt}}
@@ -10,7 +10,7 @@
 
 @misc{repo_02,
  author = {Jesus Antonio Soto},
- title = {Implementation of JWT and Basic Authenticators for OSGi 6},
+ title = {{Implementation of JWT and Basic Authenticators for OSGi 6}},
  month = {April},
  year = {2018},
  howpublished = {\url{https://github.com/antoniosv/iot-sec-thesis/tree/master/org.dreamland.whitefilter}}
@@ -27,7 +27,7 @@ howpublished = {\url{https://stackoverflow.com/a/26778123}}
 author = {Sindre, Guttorm and Opdahl, Andreas},
 year = {2018},
 month = {05},
-title = {Capturing security requirements through misuse cases}
+title = {{Capturing security requirements through misuse cases}}
 }
 
 @misc{karaf,
@@ -82,7 +82,7 @@ note = {Date accessed: 2018-05-05}
 @misc{nimbus,
   title = {{Nimbus JOSE + JWT}},
   author = {Connect2id},
-  note = {Date of access: 2018-04-01},
+  note = {Date accessed: 2018-04-01},
   howpublished = {\url{https://connect2id.com/products/nimbus-jose-jwt}}
 }
 
@@ -174,7 +174,7 @@ note = {e3323 IJCS-16-0515.R1},
 
 @misc{openhab_03,
   author = {Kai Kreuzer},
-  title = {Privacy in the Smart Home - Why we need an Intranet of Things},
+  title = {{Privacy in the Smart Home - Why we need an Intranet of Things}},
   year = {2014},
   month = {February},
   howpublished = {\url{https://kaikreuzer.blogspot.com.ee/2014/02/privacy-in-smart-home-why-we-need.html}}
@@ -182,7 +182,7 @@ note = {e3323 IJCS-16-0515.R1},
 
 @misc{openhab_04,
   author = {The openHAB Community and the openHAB Foundation e.V.},
-  title = {Securing access to openHAB},
+  title = {{Securing access to openHAB}},
   note = {Date accessed: 2018-05-16},
   howpublished = {\url{https://docs.openhab.org/installation/security.html}}
 }
@@ -209,7 +209,7 @@ keywords = "Smart Home, AAL, Personalisation, User Interface, Eclipse Smart Home
 }
 
 @misc{esh_02,
-  title = {Building IoT systems with openHAB},
+  title = {{Building IoT systems with openHAB}},
   author = {Matt Porter},
   note = {Date accessed: 2018-05-13},
   howpublished = {\url{https://events.static.linuxfound.org/sites/events/files/slides/Building\%20IoT\%20systems\%20with\%20openHAB_0.pdf}}
@@ -230,14 +230,14 @@ keywords = "Smart Home, AAL, Personalisation, User Interface, Eclipse Smart Home
 }
 
 @misc{esh_05,
- title = {Authentication API: Add documentation},
+ title = {{Authentication API: Add documentation}},
  author = {Kai Kreuzer and Markus Rathgeb},
  note = {Date accessed: 2018-02-15},
  howpublished = {\url{https://github.com/eclipse/smarthome/issues/2620}}
 }
 
 @misc{esh_06,
- title = {Eclipse SmartHome Security Concept},
+ title = {{Eclipse SmartHome Security Concept}},
  author = {Kai Kreuzer and Lukazs Dywicki and Mehmet Arziman and Markus Rathgeb},
  howpublished = {\url{https://docs.google.com/document/d/1Vja574ycr2f_1nDdhLheEPdqkRlsvHf2lc_byY2ahzc/edit#}},
  note = {Date accessed: 2018-02-12}
@@ -250,29 +250,29 @@ keywords = "Smart Home, AAL, Personalisation, User Interface, Eclipse Smart Home
 }
 
 @misc{related_02,
- author = {Apple Inc},
- title = {Using the HomeKit Accessory Protocol Specification},
+ author = {{Apple Inc}},
+ title = {{Using the HomeKit Accessory Protocol Specification}},
  note = {Date accessed: 2018-02-12},
  howpublished = {\url{https://developer.apple.com/support/homekit-accessory-protocol/}}
 }
 
 @misc{related_03,
- title = {Apple apologizes, issues MAC login security patch},
+ title = {{Apple apologizes, issues MAC login security patch}},
  author = {Jonny Evans},
  note = {Date accessed: 2018-02-12},
  howpublished = {\url{https://blogs.computerworld.com/article/3239027/apple-mac/apple-apologizes-issues-mac-login-security-patch.html}}
 }
 
 @misc{related_04,
-title = {Home Automation},
-author = {Open Remote Inc},
+title = {{Home Automation}},
+author = {{Open Remote Inc}},
 note = {Accessed on 2018-02-12},
 howpublished = {\url{http://www.openremote.com/home-automation-2/}}
 }
 
 
 @misc{related_05,
-title = {Security in OpenRemote},
+title = {{Security in OpenRemote}},
 author = {Vincent Kriek},
 note = {Accessed on 2018-02-12},
 howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security\%20in\%20OpenRemote.html}}
@@ -280,36 +280,36 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 
 @misc{related_06,
  author = {ThingsBoard},
- title = {ThingsBoard IoT Platform},
- note = {Date of access: 2018-02-12},
+ title = {{ThingsBoard IoT Platform}},
+ note = {Date accessed: 2018-02-12},
  howpublished = {\url{https://thingsboard.io/}}
 }
 
 @misc{related_07,
  author = {ThingsBoard},
- title = {ThingsBoard Architecture},
- note = {Date of access: 2018-02-12},
+ title = {{ThingsBoard Architecture}},
+ note = {Date accessed: 2018-02-12},
  howpublished = {\url{https://thingsboard.io/docs/reference/architecture/#security}}
 }
 
 @misc{related_08,
   author = {Blixa Morgan and Brendan T. Hill},
-  title = {The Thing System: The Trouble with Things},
-  note = {Date of access: 2018-05-13},
+  title = {{The Thing System: The Trouble with Things}},
+  note = {Date accessed: 2018-05-13},
   howpublished = {\url{http://thethingsystem.com/things/index.html}}
 }
 
 @misc{related_09,
   author = {Blixa Morgan and Brendan T. Hill},
-  title = {The Security Model},
-  note = {Date of access: 2018-05-13},
+  title = {{The Security Model}},
+  note = {Date accessed: 2018-05-13},
   howpublished = {\url{http://thethingsystem.com/dev/The-Security-Model.html}}
 }
 
 @misc{related_10,
   author = {Home Assistant community},
-  title = {Home Assistant // HASS Configurator},
-  note = {Date of access: 2018-05-13},
+  title = {{Home Assistant // HASS Configurator}},
+  note = {Date accessed: 2018-05-13},
   howpublished = {\url{https://www.home-assistant.io/docs/ecosystem/hass-configurator/#feature-list}}
 }
 
@@ -323,14 +323,14 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 
 @misc{related_12,
  author = {Home Assistant community},
- title = {Home Assistant // Securing},
- note = {Date of access: 2018-05-13},
+ title = {{Home Assistant // Securing}},
+ note = {Date accessed: 2018-05-13},
  howpublished = {\url{https://www.home-assistant.io/docs/configuration/securing/}}
 }
 
 @techreport{RFC6238,
  author = {D. M'Raihi and S. Machani and M. Pei and J. Rydell},
- title = {TOTP: Time-Based One-Time Password Algorithm},
+ title = {{TOTP: Time-Based One-Time Password Algorithm}},
  howpublished = {Internet Requests for Comments},
  type = {RFC},
  number = {6238},
@@ -345,13 +345,13 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 
 @misc{rest_01,
  author = {W3C Working Group},
- title = {Web Services Architecture},
+ title = {{Web Services Architecture}},
  year = {2004},
  howpublished = {\url{https://www.w3.org/TR/2004/NOTE-ws-arch-20040211/#relwwwrest}}
 }
 
 @misc{rest_02,
- title = {The Java EE 6 Tutorial. Chapter 20, Building RESTful Web Services with JAX-RS},
+ title = {{The Java EE 6 Tutorial. Chapter 20, Building RESTful Web Services with JAX-RS}},
  author = {Oracle},
  year = {2013},
  howpublished = {\url{https://docs.oracle.com/javaee/6/tutorial/doc/giepu.html}}
@@ -373,22 +373,21 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 
 @misc{servlet,
  author = {Oracle},
- title = {Lesson 5: Writing Servlets},
- howpublished = {Technical tutorial},
- url = {http://www.oracle.com/technetwork/java/servlet-142430.html}
+ title = {{Lesson 5: Writing Servlets}},
+ note = {Date accessed: 2018-04-15},
+ howpublished = {\url{http://www.oracle.com/technetwork/java/servlet-142430.html}}
 }
 
 @misc{httpservice,
  author = {OSGi Alliance},
- title = {Interface HttpService, OSGi Service Platform Version 4.2},
- howpublished = {Technical documentation},
- year = {2010}, 
- url = {https://osgi.org/javadoc/r4v42/org/osgi/service/http/HttpService.html}
+ title = {{Interface HttpService, OSGi Service Platform Version 4.2}},
+ year = {2010},  
+ howpublished = {\url{https://osgi.org/javadoc/r4v42/org/osgi/service/http/HttpService.html}}
 }
 
 @misc{httpcontext,
  author = {OSGi Alliance},
- title = {Interface HttpContext, OSGi Service Platform Version 4.2},
+ title = {{Interface HttpContext, OSGi Service Platform Version 4.2}},
  year = {2010}, 
  howpublished = {\url{https://osgi.org/javadoc/r4v42/org/osgi/service/http/HttpContext.html}}
 }
@@ -403,23 +402,22 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 
 @misc{httpwhiteboard_02,
   author = {Jan Willem Janssen and Marcel Offermans},
-  title = {Felix HTTP. Paving the road to the future},
+  title = {{Felix HTTP. Paving the road to the future}},
   note = {Accessed: 2018-05-12},
   howpublished = {\url{https://events.static.linuxfound.org/sites/events/files/slides/Felix\%20HTTP\%20-\%20Paving\%20the\%20road\%20to\%20the\%20future_0.pdf}}
 }
 
-@techreport{osgi_core,
+@misc{osgi_core,
  author = {OSGi Alliance},
- title = {OSGi Service Platform Release 4 Version 4.2 Core Specification},
- howpublished = {Technical specification},
+ title = {{OSGi Service Platform Release 4 Version 4.2 Core Specification}},
+ howpublished =  {\url{https://www.osgi.org/release-4-version-4-2-download/}},
  year = {2009},
- month = {June},
- url = {https://www.osgi.org/release-4-version-4-2-download/}
+ month = {June}
 }
 
 @techreport{RFC5246,
  author = {T. Dierks and E. Rescorla},
- title = {The Transport Layer Security (TLS) Protocol Version 1.2},
+ title = {{The Transport Layer Security (TLS) Protocol Version 1.2}},
  howpublished = {Internet Requests for Comments},
  type = {RFC},
  number = {5246},
@@ -435,7 +433,7 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 
 @techreport{RFC7519,
  author = {M. Jones and J. Bradley and N. Sakimura},
- title = {JSON Web Token (JWT)},
+ title = {{JSON Web Token (JWT)}},
  howpublished = {Internet Requests for Comments},
  type = {RFC},
  number = {7519},
@@ -451,7 +449,7 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 
 @techreport{RFC2616,
   author = {Roy T. Fielding and James Gettys and Jeffrey C. Mogul and Henrik Frystyk Nielsen and Larry Masinter and Paul J. Leach and Tim Berners-Lee},
-  title = {Hypertext Transfer Protocol -- HTTP/1.1},
+  title = {{Hypertext Transfer Protocol -- HTTP/1.1}},
   howpublished = {Internet Requests for Comments},
   type = {RFC},
   number = {2616},
@@ -547,66 +545,9 @@ author = "Sanjay Goel and Hany A. Shawky",
 keywords = "Security breaches, Event-study methodology, Risk analysis, Information assurance, Market valuation, Information security"
 }
 
-@INPROCEEDINGS{dummy,
-  author = {Gilles Barthe and Benjamin Gr{\'e}goire and Santiago {Zanella B{\'e}guelin}},
-  title = {Formal Certification of Code-Based Cryptographic Proofs},
-  booktitle = {36th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages,
-	POPL 2009},
-  year = {2009},
-  pages = {90--101},
-  publisher = {ACM},
-  url = {http://dx.doi.org/10.1145/1480881.1480894}
-}
-
 @MISC{heckman,
   author = {Mark R. Heckman},
-  title = {The Difference between Data Security and Privacy},
-  howpublished = {Web article in United States CyberSecurity Magazine},
-  url={https://www.uscybersecurity.net/cybersecuritychannel/the-difference-between-data-security-and-privacy/}
+  title = {{The Difference between Data Security and Privacy}},
+  howpublished = {\url{https://www.uscybersecurity.net/cybersecuritychannel/the-difference-between-data-security-and-privacy/}},
+  note = {Date accessed: 2018-05-10}
 }
-
-@MISC{GameB_1,
-  author = {Mihir Bellare and Phillip Rogaway},
-  title = {Code-Based Game-Playing Proofs and the Security of Triple Encryption},
-  howpublished = {Cryptology ePrint Archive, Report 2004/331},
-  year = {2004},
-  note = {\url{http://eprint.iacr.org/}}
-}
-
-@MISC{proVerif,
-  author = {Bruno Blanchet},
-  title = {{Proverif: Cryptographic protocol verifier in the formal model}},
-  howpublished = {\url{http://www.proverif.ens.fr/}},
-  timestamp = {2012.05.15}
-}
-
-@MISC{kamm12,
-  author = {Liina Kamm},
-  title = {{ProveIt -- How to make proving cryptographic protocols less tedious}},
-  howpublished = {Talk at the 21st Estonian Computer Science Theory Days at Kubija},
-  month = {January},
-  year = {2012},
-  file = {:/Users/tiina/Desktop/Thesis/Documents/papers/2012-05-tiina-bachelors-thesis/References/kamm-slides.pdf:PDF},
-  timestamp = {2012.04.27},
-  url = {http://www.cs.ut.ee/~varmo/tday-kubija/kamm-slides.pdf}
-}
-
-
-@MISC{GameB_2,
-  author = {Victor Shoup},
-  title = {Sequences of games: a tool for taming complexity in security proofs},
-  howpublished = {Cryptology ePrint Archive, Report 2004/332},
-  year = {2004},
-  note = {\url{http://eprint.iacr.org/}}
-}
-
-@comment{jabref-meta: selector_review:}
-
-@comment{jabref-meta: selector_publisher:}
-
-@comment{jabref-meta: selector_author:}
-
-@comment{jabref-meta: selector_journal:}
-
-@comment{jabref-meta: selector_keywords:}
-
