--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -345,30 +345,30 @@ We thrive in an age where our lifestyle is slowly being invaded by objects that 
 
 Living in a context-aware home is no longer a futuristic vision. Automatic security systems with face recognition, scheduled meals prepared by e.g.\ a smart rice cooker, coffee maker; smart refrigerators that notice when ingredients have expired, among others, are just some examples of typical appliances that might be used in a smart home. Going back to the idea of privacy protection: would a regular resident of a smart home be happy that their, for instance, food choices are being disclosed to e.g., their neighbors? Usually, we expect that people are able to maintain their privacy in their own homes. Thus, openly managing such amounts of information becomes a problem, rather than an advantage. In fact, a study disclosed by Orange about the future of digital trust has shown that 78\% of consumers think that it is hard to trust companies when it comes to use their personal data~\cite{orange}. This hints that data privacy and security in general might be an important aspect of the systems that employ these context-aware devices. 
 
-Among all the different scenarios and applications that could be made a reality with these context-aware devices, the \emph{smart home} is of particular interest. openHAB is an automation software that brings together and manages \emph{things} for the purpose of building a smart home environment~\cite{openhab_02}. The smart home, an application of the Internet of Things paradigm, is gaining popularity not only as a toy, but as a realistic intelligent environment that can be put in use today. A so-called \emph{thing} i.e., a sensing device, is the basic unit in a smart home environment. Things capture data from their environment and transmit it to another point, typically to another node inside the same network, or perhaps through the Internet to a remote destination. However, is there any security in this transmission of data?
+Among all the different scenarios and applications that could be made a reality with these context-aware devices, the \emph{smart home} is of particular interest. OpenHAB is an automation software that brings together and manages \emph{things} for the purpose of building a smart home environment~\cite{openhab_02}. The smart home, an application of the Internet of Things paradigm, is gaining popularity not only as a toy, but as a realistic intelligent environment that can be put in use today. A so-called \emph{thing} i.e., a sensing device, is the basic unit in a smart home environment. Things capture data from their environment and transmit it to another point, typically to another node inside the same network, or perhaps through the Internet to a remote destination. However, is there any security in this transmission of data?
 
-Security is defined as having ``protection against adversaries'', i.e., those would, intentionally or not, cause harm~\cite{whitman2011principles} . In this context, security refers to \emph{information security}, which is conceived as a layer of security that aims to protect the confidentiality, integrity, authenticity, and availability of information resources that may be in storage, processing or transmission. An adversary could attempt to violate these security properties through the use of passive (eavesdropping) and active (message tampering, Man-in-the-Middle) attacks.
+Security is defined as having ``protection against adversaries'', i.e., those would, intentionally or not, cause harm~\cite{whitman2011principles} . In this context, security refers to \emph{information security}, which is conceived as a layer of security that aims to protect the confidentiality, integrity, authenticity, and availability of information resources that may be in storage, processing or transmission. An adversary could attempt to violate these security properties through the use of passive (eavesdropping) and active (e.g.\ message tampering, Man-in-the-Middle) attacks.
 
-This work introduces the notion of reviewing, evaluating, and possibly improving the existing (information) security present in the openHAB automation software for the smart home environment. 
+This work introduces the notion of reviewing, evaluating, and possibly improving the (information) security present in the openHAB automation software for the smart home environment. 
 
 \subsection{Problem Statement}
 
-The security of the openHAB software, in terms of data protection and privacy preservation, is currently undefined, as there are no direct sources that address these topics. It is desirable to have an overview on what kind of security mechanisms are present and enforced in openHAB, as well as which vulnerabilities might have an impact on its use and future adoption. Morevoer, as an open-source project, there is no clear indication that the security is being actively worked on for this project, or if it is feasible to do so. Furthermore, there is evidence that the openHAB smart home automation project does not define an access control policy, nor does it implement an authorization model to prevent information from being leaked to unauthorized parties.
+The security of the openHAB software, in terms of data protection and privacy preservation, is currently undefined, as there are no direct sources that address these topics. It is desirable to have an overview on what kind of security mechanisms are present and enforced in openHAB, as well as which vulnerabilities might have an impact on its use and future adoption. Moreover, as an open-source project, there is no clear indication that the security is being actively worked on for this project, or if it is feasible to do so. Furthermore, there is evidence that the openHAB smart home automation project does not define an access control policy, nor does it implement an authorization model to prevent information from being leaked to unauthorized parties.
 
 \noindent The problem statement and purpose of this work can be summarized as follows:
 \begin{itemize}
-\item To review existing the security mechanisms of the openHAB smart home automation software.
+\item To review the existing security mechanisms of the openHAB smart home automation software.
 \item To study and implement a JSON Web Token-based authenticator for Eclipse SmartHome, the core of openHAB, as a base for access control mechanisms.
 \item To propose a usable authorization model to manage access permissions to things and resources in openHAB. 
 \end{itemize}
 
 \subsection{Motivation}
 
-It is known that security breaches may have a significant economic impact on a firm, as described by~\cite{GOEL}. Data loss or theft, tampering, and unauthorized operations are just some of the possible ocurrences led by the lack of proper security mechanisms in place. In the case of openHAB, a smart home application, it is not quite quantifiable how expensive it results to have a security breach occur at any level. The consequences may go from user discomfort to identity theft, or worse.
+It is known that security breaches may have a significant economic impact on a firm, as described by~\cite{GOEL}. Data loss or theft, tampering, and unauthorized operations are just some of the possible ocurrences led by the lack of proper security mechanisms in place. In the case of openHAB, a smart home application, it is not quite quantifiable how expensive it results to have a security breach occur at any level. The consequences may go from mere user discomfort to identity theft, or worse.
 
-Applications for the Internet of Things are still very recent, and not much is known about the possibilities they will bring. This has led to ongoing efforts, such as openHAB, to focus mostly on the system functionalities, rather than the user experience, security, or many other non-functional requirements. Ideally, there should be a framework that can be used to evaluate the security of IoT applications. At the time, this has not been established due to the vast differences in the architectures and implementations. Some attempts to identify security threats in IoT do exist, however, such as the OWASP Top 10 for IoT~\cite{owasp}. As the environment grows in complexity, so do the attack surface areas and possible vulnerabilities.
+Applications for the Internet of Things are still very recent, and not much is known about the possibilities they will bring. This has led to ongoing efforts, such as openHAB, to focus mostly on the system functionalities, rather than the user experience, security, and many other non-functional requirements. Ideally, there should be a framework that can be used to evaluate the security of IoT applications. At this time, a framework for this purpose has not been established due to the vast differences in the architectures and implementations. Some attempts to identify security threats in IoT do exist, however, such as the OWASP Top 10 for IoT~\cite{owasp}. As the environment grows in complexity, so do the attack surface areas and possible vulnerabilities.
 
-Not knowing the extent of how \emph{secure} openHAB or any other application of IoT is deters its adoption, and raises concerns about existing instances. Security by obscurity has never been a reasonable attempt to protect information assets from adversaries. And indeed, as an open-source project, any party can freely view the code to try to find hidden vulnerabilities. For this reason, some effort could be spared for reviewing the security of existing models for Internet of Things, including concrete applications, such as openHAB.
+Not knowing the extent of how \emph{secure} openHAB or any other application of IoT is deters its adoption and raises concerns about existing instances. Security by obscurity has never been a reasonable attempt to protect information assets from adversaries. And indeed, as an open-source project, any party can freely view the code to try to find hidden vulnerabilities. For this reason, some effort could be spared for reviewing the security of existing models for Internet of Things, including concrete applications, such as openHAB.
 
 \subsection{Hypothesis}
 
@@ -383,7 +383,7 @@ This work presents three main contributions. First, a literature overview on the
 This work is divided in several chapters:\\
 Chapter~\ref{sec:art} introduces some key concepts in terms of security and the OSGi architecture, and later delves into an overview of the security challenges present in the IoT. \\
 Chapter~\ref{sec:related} briefly introduces some works loosely related to the contributions made in this work, and superficially describes their security mechanisms.\\
-Chapter~\ref{sec:method} describes in great detail the methodology to implement a JSON Web Token-based authenticator, and later makes a proposal for an authorization model suitable for the Eclipse SmartHome, and therefore, for the openHAB smart home application. \\
+Chapter~\ref{sec:method} describes in great detail the methodology to implement a JSON Web Token-based authenticator, and later makes a proposal for an authorization model suitable for Eclipse SmartHome, and therefore, for the openHAB smart home application. \\
 Chapter~\ref{sec:eval} evaluates and discusses the authenticator implementation and authorization model proposal.\\
 Chapter~\ref{sec:conclusion} presents the general conclusions obtained from this work, and briefly describes the future research directions to build upon the contributions presented.
 
@@ -464,7 +464,7 @@ Depending on the security policy requirements, a different authorization model m
 
 Usually called an architecture, the OSGi framework provides a general-purpose, secure, and managed Java framework that supports the deployment of bundles~\cite{osgi_core}. A bundle is the extensible application unit in the OSGi framework. In short, OSGi-based applications are made up of bundles, and each of these may expose their internal business logic so that other bundles make use of it. A runtime implementation is capable of dynamically downloading, adding and removing bundles as necessary. Each bundle has an identifier which includes its version, so it becomes possible to have different versions of the same bundle running at the same time. 
 
-There are several implementations of the OSGi specification, such as Eclipse Equinox, Apache Felix, Eclipse Concierge, and Knopflerfish. Equinox is the reference implementation of OSGi and it is used in many big projects, including Eclipse SmartHome and openHAB. Note that for the Eclipse SmartHome, the runtime is bounded by the OSGi Release~4.2. 
+There are several implementations of the OSGi specification, such as Eclipse Equinox, Apache Felix, Eclipse Concierge, and Knopflerfish. Equinox is the reference implementation of OSGi and it is used in many big projects, including Eclipse SmartHome and openHAB. Note that for Eclipse SmartHome, the runtime is bounded by the OSGi Release~4.2. 
 
 \subsubsection{Bundles}
 
@@ -794,7 +794,7 @@ The community in openHAB was inspired by JAAS-based attempts at security and pro
 
 There are several problems with this approach, however. First, access control is not managed through a database or any other dynamic means, but is instead static. It is defined inside the source code, and there is no way to change permissions at runtime. This means that the project would need to be built and deployed again in order to take in any changes to the authorization policy. Secondly, it offers no clear view on how the fine-grained details would have its access controlled. For example, let the status of a light bulb be of public access, but only authorized users may flip its switch from the user interface; others may only view the state of the light bulb. Moreover, a different thing could have the opposite behavior: to hide its status, but make it public to control it. As openHAB is vendor and thing-agnostic, relying on annotations makes it impossible to deal with such fine-grained details in authorization.
 
-Following the design patterns in Apache Shiro, the authentication API for the Eclipse SmartHome was designed to have the means to plug in any authentication providers as desired. These providers may provide the authentication service either locally or remotely (e.g.\ through OAuth). The goal was to have a flexible solution that may accept different kinds of authentication mechanisms to satisfy the many different use-case scenarios. The concrete implementations would be done by the products relying on the Eclipse SmartHome, such as openHAB. Different products may have different scenarios and constraints for authentication, and so it makes sense to have some flexibility in this aspect. For example, a new user may prefer to login through their Google credentials instead of setting up a new account for the particular SmartHome instance. 
+Following the design patterns in Apache Shiro, the authentication API for Eclipse SmartHome was designed to have the means to plug in any authentication providers as desired. These providers may provide the authentication service either locally or remotely (e.g.\ through OAuth). The goal was to have a flexible solution that may accept different kinds of authentication mechanisms to satisfy the many different use-case scenarios. The concrete implementations would be done by the products relying on Eclipse SmartHome, such as openHAB. Different products may have different scenarios and constraints for authentication, and so it makes sense to have some flexibility in this aspect. For example, a new user may prefer to login through their Google credentials instead of setting up a new account for the particular SmartHome instance. 
 
 A common problem with the attempted authentication API was that there was no way to turn it off, and thus it automatically rejected all incoming requests without an authorization header~\cite{esh_05}. Normally, this is not a problem for most web applications, as there typically is a redirect method that leads to a login page, where the user can input their credentials. The authentication API, however, offered no login form, as it only supported basic-authentication out of the box. Indeed, without a way to inject the credentials into every HTTP request, the changes were mostly unusable. This was a problem especially for new users, who would have no idea on what to do whenever a ``Forbidden access'' page would come up. Originally, it was thought that if no authentication provider was available, then access control would not be enforced, making it an optional feature. However, it turned out that not detecting any authentication provider made no change whatsoever, leading to all requests to the REST end points being rejected. In the end, it was decided to disable the authentication API bundle from the default runtime, so it would not impede the normal functioning of openHAB.
 
@@ -804,7 +804,7 @@ As a product of the discussion at the time, the Eclipse Smarthome community crea
 
 \subsection{Misuse Cases}
 
-In an attempt to identify which were the aspects that more resembled requirements with respect to security, rather than management of resources, \emph{misuse cases} were written according to the state of the Eclipse Smarthome at the time. Thus, the provided requirements document included the \emph{use cases} that served as a basis to identify the \emph{misuse cases}. 
+In an attempt to identify which were the aspects that more resembled requirements with respect to security, rather than management of resources, \emph{misuse cases} were written according to the state of the Eclipse Smarthome framework at the time. Thus, the provided requirements document included the \emph{use cases} that served as a basis to identify the \emph{misuse cases}. 
 
 A misuse case, as the name suggests, is meant to cause the opposite consequence of a typical use case. That is, instead of designing the system to cover a certain functionality, the intention is to pinpoint which functionalities or \emph{actions} should not be permitted in the ideal system~\cite{misuse}. A misuse case diagram shows mis-actors, i.e.\ adversaries, initiating misuse cases to cause some anomaly by taking advantage of legitimate use cases.
 
@@ -851,15 +851,15 @@ The aforementioned procedure was designed with the assumption that, at all times
 
 \subsection{Architectural Implications of Authentication}
 
-As a multi-layered automation software solution, it is not trivial to implement authentication, no matter the type, so that all parts of the system are covered by it. Recall that in chapter \ref{ssec:discussion} it was stated that resources in the smart home ecosystem do not only involve things, but also many different aspects of the system. Moreover, the Eclipse Smarthome is designed according to the OSGi architecture, and thus all modules are maintained as \emph{bundles}. These bundles contain, among other things, typical Java servlets and REST endpoints. If the methods present inside these Java classes have to go through some kind of \emph{check} before being executed, then access control may be implemented. This chapter gives details on the architecture and current development affairs, but this is introduced only as a base to delve into the proposed solution for authentication with JWT.
+As a multi-layered automation software solution, it is not trivial to implement authentication, no matter the type, so that all parts of the system are covered by it. Recall that in chapter \ref{ssec:discussion} it was stated that resources in the smart home ecosystem do not only involve things, but also many different aspects of the system. Moreover, Eclipse Smarthome is designed according to the OSGi architecture, and thus all modules are maintained as \emph{bundles}. These bundles contain, among other things, typical Java servlets and REST endpoints. If the methods present inside these Java classes have to go through some kind of \emph{check} before being executed, then access control may be implemented. This chapter gives details on the architecture and current development affairs, but this is introduced only as a base to delve into the proposed solution for authentication with JWT.
 
 The idea, in general, is that any incoming HTTP request would have to be caught before running whatever Java method it attempted to access. For typical OSGi applications, the use of \emph{filters} is most commonly encouraged. A filter is a mechanism that may be applied before or after a Java method is accessed. Thus, it becomes a natural choice to employ filters for the purpose of access control.
 
-It turns out, however, that regular filters do not work for the methods involving REST endpoints, such as a GET operation to return a list of all connected devices. These methods are actually based on the JAX-RS specification for a REST API in Java. In short, they require a different type of filters, which use a set of classes different from the regular OSGi filters. Aditionally, to make use of JAX-RS in OSGi applications, it is needed to use a third-party connector. Previous work on authentication for the Eclipse SmartHome made use of this connector and the special filters. There were problems with using these special filters, however: first of all, the role permissions could only be set within the code, thus it was not a good mechanism for managing permissions at a more granular scale; secondly, due to classloading problems, it is a problem in some scenarios to make use of the JAX-RS third-party connector; and finally, this special filter is not compatible with traditional servlets (i.e., those that do not involve the JAX-RS REST API).
+It turns out, however, that regular filters do not work for the methods involving REST endpoints, such as a GET operation to return a list of all connected devices. These methods are actually based on the JAX-RS specification for a REST API in Java. In short, they require a different type of filters, which use a set of classes different from the regular OSGi filters. Aditionally, to make use of JAX-RS in OSGi applications, it is needed to use a third-party connector. Previous work on authentication for Eclipse SmartHome made use of this connector and the special filters. There were problems with using these special filters, however: first of all, the role permissions could only be set within the code, thus it was not a good mechanism for managing permissions at a more granular scale; secondly, due to classloading problems, it is a problem in some scenarios to make use of the JAX-RS third-party connector; and finally, this special filter is not compatible with traditional servlets (i.e., those that do not involve the JAX-RS REST API).
 
 As part of the OSGi release 6 specification, filters may be registered to any resource through a special mechanism called the ``whiteboard pattern''. Current implementation of the Eclipse SmartHome runtime is bounded by the OSGi~4.2 specification, and due to constraints in the rest of the software stack, it is not immediately feasible to update the runtime to a newer specification. Part of the work by the community was to create a \emph{bridge} between the OSGi~4.2 runtime and the newer whiteboard pattern functionality. For some time, this work attempted to implement JWT authentication for a ficticious, patched runtime that supported the use of the filters registered by the whiteboard. However, it was later decided that this bridge was not trivial, and the community halted its development.
 
-As this particular development of the Eclipse Smarthome halted, a new direction involving traditional servlet security was considered for this work. As part of servlet registration to the OSGi runtime, an entity called \texttt{HttpContext} has to be provided. This entity provides the means to intercept HTTP requests before they reach the servlet, and thus it becomes the point where authentication and authorization may be implemented. Originally, this approach was discarded because the REST endpoints did not support the use of a \texttt{HttpContext} shared with the other servlets. The key in this case is that both groups of servlets, the traditional and the REST servlet, run under different application contexts. What this means is that, even if a traditional servlet handles authentication properly, this information would not be propagated to the REST endpoints, and thus authorization mechanisms would not be enforced. In the months of March and April, however, part of the community started an effort to combine, or rather, to \emph{bridge} the provided \texttt{HttpContext} among servlets and REST endpoints, virtually creating a single application context for all servlets.
+As this particular development of the Eclipse Smarthome framework halted, a new direction involving traditional servlet security was considered for this work. As part of servlet registration to the OSGi runtime, an entity called \texttt{HttpContext} has to be provided. This entity provides the means to intercept HTTP requests before they reach the servlet, and thus it becomes the point where authentication and authorization may be implemented. Originally, this approach was discarded because the REST endpoints did not support the use of a \texttt{HttpContext} shared with the other servlets. The key in this case is that both groups of servlets, the traditional and the REST servlet, run under different application contexts. What this means is that, even if a traditional servlet handles authentication properly, this information would not be propagated to the REST endpoints, and thus authorization mechanisms would not be enforced. In the months of March and April, however, part of the community started an effort to combine, or rather, to \emph{bridge} the provided \texttt{HttpContext} among servlets and REST endpoints, virtually creating a single application context for all servlets.
 
 Figure~\ref{fig:esh_auth_arch} shows at a very high level the underlying architecture of the Eclipse SmartHome runtime. At the lowest level, the Jetty HTTP server and servlet engine is running. On top of it, there are several servlets running separately. Part of these servlets may be associated as being \emph{traditional}, while a particular servlet, the REST servlet, runs under different conditions. The REST servlet is used to serve resources, typically in the form of JSON structures, that contain data about things, items, channels, etc. The Chart and Icon servlets are more traditional servlets and thus, run under the same shared application context. Meanwhile, the REST servlet is shown to run under an isolated application context. Thus, the solution worked on by the community is to \textbf{bridge} both application contexts and therefore have a commonly shared \texttt{HttpContext}~\cite{esh_03}. Yellow boxes represent the entities or resources that should have its access restricted according to a specified policy. Green boxes represent the possible solution to the problem, whereas the red boxes are the attempted solutions in previous years. Particularly, ``JAX-RS Custom ContainerContext'' was an attempted solution by the community, which had many problems when ported into the final openHAB software stack. An alternative solution to it, the ``JAX-RS Custom Filter'' was originally planned to be implemented for this work, but the notion was discarded after understanding the limitations of this kind of filter, since it would not enforce authorization for the rest of the servlets (e.g.\ Icon servlet). 
 
